# traefik-fallback-ingressroute

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
tests/: __init__.py  test_traefik_fallback_ingressroute.py
traefik_fallback_ingressroute/: __init__.py  migrator.py
